--- a/styles/new-nav.css
+++ b/styles/new-nav.css
@@ -7,6 +7,7 @@
     width: 98%;
     height: 60px;
     border-radius: 20px;
+    position: fixed;
 }
 
 .nav-bar-box {
