--- a/styles/style.css
+++ b/styles/style.css
@@ -127,7 +127,7 @@ nav ul a {
 .hero-group-image-container {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 50%;
   border-radius: 20px;
   overflow: hidden;
 }
@@ -331,7 +331,7 @@ nav ul a {
 
 @media (max-width: 768px) {
   .hero-section {
-    height: 172vh;
+    height: 195vh;
   }
   .hero-content {
     height: 200vh;
@@ -340,7 +340,7 @@ nav ul a {
   }
   .hero-left {
     width: 100%;
-    height: 40vh;
+    height: 44vh;
   }
   .hero-left h1 {
     font-size: 36px;
@@ -358,7 +358,7 @@ nav ul a {
   }
   .hero-group-image-content {
     position: absolute;
-    top: 60%;
+    bottom: 3px;
     height: fit-content;
   }
   .hero-group-image-content p {
@@ -374,7 +374,7 @@ nav ul a {
 
   .hero-right {
     width: 100%;
-    height: 120vh;
+    height: 140vh;
   }
   .hero-right-row1 > button {
     letter-spacing: 1px;
@@ -386,7 +386,7 @@ nav ul a {
     letter-spacing: 1px;
     line-height: 1;
     font-size: 20px;
-    padding: 12px 20px;
+    padding: 23px;
     width: 50%;
   }
   .hero-right-row3 > .btn-arrow {
@@ -398,8 +398,16 @@ nav ul a {
   }
   .hero-right-row4 > div {
     width: 100%;
-    height: 50%;
+    height: 60%;
   }
+}
+@media (max-width: 400px){
+  .hero-section {
+    height: 204vh;
+}
+  .hero-right {
+    height: 150vh;
+}
 }
 
 /* Services we provide section */
@@ -752,7 +760,7 @@ nav ul a {
 }
 @media screen and (max-width: 768px) {
   .short-about {
-    height: 120vh;
+    height: 128vh;
   }
   .short-about > .container {
     height: 112vh;
@@ -773,15 +781,27 @@ nav ul a {
   }
   .short-about-right {
     width: 100%;
-    height: 50vh;
+    height: 30vh;
     display: grid;
     place-items: center;
+    margin: 14vh 0 0;
   }
   .short-about-right > .boxes > .box {
     display: none;
   }
+  .short-about-right > .boxes > .img-box > img {
+    margin: 0;
+  }
 }
-
+@media screen and (max-width: 400px) {
+  .short-about {
+    height: 136vh;
+  }
+  .short-about-right {
+    height: 34vh;
+    margin: 20vh 0 0;
+  }
+}
 /* exclusive updates section */
 .exclusive-updates h1 {
   font-size: 36px;
@@ -1018,7 +1038,7 @@ nav ul a {
 @media (max-width: 768px) {
   .review {
     margin-bottom: 48px;
-    height: 230vh;
+    height: 220vh;
   }
   .review h1 {
     padding: 8px 0px;
@@ -1062,16 +1082,14 @@ footer > .container2 {
 .form-container {
   display: grid;
   place-items: center;
-  
 }
 @media screen and (max-width: 768px) {
-  .text-light{
+  .text-light {
     padding-left: 15px;
     padding-right: 15px;
   }
-
 }
-  
+
 .form-wrapper2 {
   width: 80%;
   height: 24%;
@@ -1156,7 +1174,7 @@ footer > .container2 {
   border-radius: 40px;
 }
 
-.btn-contact {
+.btn-contact-footer {
   background: transparent;
   padding: 8px 20px;
   border: 1px solid black;
@@ -1165,11 +1183,11 @@ footer > .container2 {
   display: flex;
   gap: 10px;
 }
-.btn-contact:hover {
+.btn-contact-footer:hover {
   background-color: #000;
   color: #fff;
 }
-.btn-contact img {
+.btn-contact-footer img {
   fill: #000;
 }
 
@@ -1271,9 +1289,9 @@ footer > .container2 {
 }
 @media (max-width: 768px) {
   footer > .container2 {
-    height: 120vh;
+    height: 142vh;
   }
-  
+
   .form-wrapper2 {
     height: 32%;
     top: -28%;
@@ -1313,5 +1331,10 @@ footer > .container2 {
 
   .quick-links {
     margin-top: 0%;
+  }
+}
+@media (max-width: 400px) {
+  footer > .container2 {
+    height: 154vh;
   }
 }
